# MLLearning

./: .gitignore  CLAUDE.md  IDEAS.md  PROGRESS.md  README.md  ROADMAP.md  VOICE-TUTORIALS.md  pyproject.toml
.claude/commands/: create-lesson.md  end-lesson.md  lesson-start.md
assets/: file.txt
code/phase-0/: 01_python_basics.py  02_type_hints.py  03_numpy.py  04_pandas.py  05_confounder_example.py  05_viz.py
code/phase-1/: 01_vectors.py  02_test.py  04_derivatives.py  05_gradient_descent.py  05_test.py
code/phase-2/: 01_sklearn_fundamentals.py  02_linear_regression.py  02b_diabetes_practice.py  02c_r2_visualization.py  retrieval_review.py
docs/phase-0-python/: 01-python-basics.md  02-type-hints.md  03-numpy.md  04-pandas.md  05-visualization.md  06-jupyter.md  07-git-for-ml.md  README.md
docs/phase-1-math/: 01-vectors.md  04-derivatives-gradients.md  05-gradient-descent.md  README.md
docs/phase-2-classical-ml/: 01-sklearn-fundamentals.md  02-linear-regression.md  README.md
docs/phase-3-deep-learning/: README.md
docs/phase-4-llm-genai/: README.md
docs/phase-5-mlops/: README.md
docs/phase-6-portfolio/: README.md
notebooks/: titanic_eda.ipynb
voice/: bot_cli.py  pyproject.toml
voice/flows/: lesson-06-jupyter-intro.json  lesson-pandas-basics.json  retrieval-numpy-03-resume.json  retrieval-numpy-03.json  tutor-ua_ml-phase0-04-eda-methodology_retrieval.json
