[project]
name = "voice-agent"
version = "0.2.0"
description = "Local voice interview agent — Pipecat + Daily transport, з 'готово'-тригером і mute-filter self-echo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.2",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pipecat-ai[cartesia,deepgram,openai,silero,webrtc,local]==0.0.100",
]

[project.optional-dependencies]
dev = ["ruff>=0.12.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
